Fixed long standing bug for portals
A portal uses a background div which covers the entire document and blocks mouse events. That does not work with menus, which need mouse events going through (except for wheel events).

--- a/gui/frontend/src/components/ui/Portal/Portal.css
+++ b/gui/frontend/src/components/ui/Portal/Portal.css
@@ -34,6 +34,11 @@
     background: rgba(0, 0, 0, var(--background-opacity));
 }
 
+/* Necessary for menus to allow mouse events go to any of the submenus. */
+.msg.portal.ignoreMouse {
+    pointer-events: none;
+}
+
 .msg.portal > * {
     pointer-events: auto;
 }
